language/move-prover/tests/sources/functional/aborts_if_with_code.exp
Move prover returns: exiting with boogie verification errors
error: function aborts under this condition but with the wrong code

    ┌── tests/sources/functional/aborts_if_with_code.move:79:31 ───
    │
 79 │         aborts_if x == 2 with 1;
    │                               ^
    ·
 74 │             abort(2)
    │             -------- abort happened here with code `0x2`
    │
    =     at tests/sources/functional/aborts_if_with_code.move:69:5: aborts_if_with_code_mixed_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:70:18: aborts_if_with_code_mixed_invalid
    =         x = <redacted>
    =     at tests/sources/functional/aborts_if_with_code.move:73:9: aborts_if_with_code_mixed_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:74:13: aborts_if_with_code_mixed_invalid (ABORTED)

error: abort code not covered by any of the `aborts_if` or `aborts_with` clauses

     ┌── tests/sources/functional/aborts_if_with_code.move:97:5 ───
     │
  97 │     fun aborts_with_invalid(x: u64) {
     │     ^
     ·
 102 │             abort(2)
     │             -------- abort happened here with code `0x2`
     │
     =     at tests/sources/functional/aborts_if_with_code.move:97:5: aborts_with_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:98:18: aborts_with_invalid
     =         x = <redacted>
     =     at tests/sources/functional/aborts_if_with_code.move:101:9: aborts_with_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:102:13: aborts_with_invalid (ABORTED)

error: abort code not covered by any of the `aborts_if` or `aborts_with` clauses

     ┌── tests/sources/functional/aborts_if_with_code.move:123:5 ───
     │
 123 │     fun aborts_with_mixed_invalid(x: u64) {
     │     ^
     ·
 128 │             abort(1)
     │             -------- abort happened here with code `0x1`
     │
     =     at tests/sources/functional/aborts_if_with_code.move:123:5: aborts_with_mixed_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:124:18: aborts_with_mixed_invalid
     =         x = <redacted>
     =     at tests/sources/functional/aborts_if_with_code.move:127:9: aborts_with_mixed_invalid
     =     at tests/sources/functional/aborts_if_with_code.move:128:13: aborts_with_mixed_invalid (ABORTED)

error: function aborts under this condition but with the wrong code

    ┌── tests/sources/functional/aborts_if_with_code.move:24:40 ───
    │
 24 │         aborts_if x + y > MAX_U64 with EXECUTION_FAILURE;
    │                                        ^^^^^^^^^^^^^^^^^
    ·
 16 │             abort 3
    │             ------- abort happened here with code `0x3`
    │
    =     at tests/sources/functional/aborts_if_with_code.move:11:5: conditional_abort
    =     at tests/sources/functional/aborts_if_with_code.move:12:18: conditional_abort
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/functional/aborts_if_with_code.move:15:9: conditional_abort
    =     at tests/sources/functional/aborts_if_with_code.move:16:13: conditional_abort (ABORTED)

error: function aborts under this condition but with the wrong code

    ┌── tests/sources/functional/aborts_if_with_code.move:39:31 ───
    │
 39 │         aborts_if x == 1 with 1; // wrong code
    │                               ^
    ·
 31 │             abort 2
    │             ------- abort happened here with code `0x2`
    │
    =     at tests/sources/functional/aborts_if_with_code.move:29:5: conditional_abort_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:30:18: conditional_abort_invalid
    =         x = <redacted>,
    =         y = <redacted>
    =     at tests/sources/functional/aborts_if_with_code.move:31:13: conditional_abort_invalid (ABORTED)

error: function aborts under this condition but with the wrong code

    ┌── tests/sources/functional/aborts_if_with_code.move:49:31 ───
    │
 49 │         aborts_if x == 0 with 1; // wrong code
    │                               ^
    ·
 46 │         10 / x
    │         -- abort happened here with execution failure
    │
    =     at tests/sources/functional/aborts_if_with_code.move:45:5: exec_failure_invalid
    =     at tests/sources/functional/aborts_if_with_code.move:46:9: exec_failure_invalid (ABORTED)
    =         x = <redacted>
